--- a/account.html
+++ b/account.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Account | Kaya</title>
-  <link rel="icon" href="Kaya.jpg" type="image">
+  <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="signup.css"> 
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/signup.css"> 
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="font.css">
-
+  <link rel="stylesheet" href="css/font.css">
+<link rel="stylesheet" href="css/background.css">
   <style>
     body {
-      background-image: url('bg-2.jpg');
+      background-image: url('images/bg-2.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -49,7 +49,7 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="Kaya.png" alt="Kaya" width="50" height="50">
+        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
 <!-- Account Info -->
 <div class="form-wrapper">
   <div class="form-container text-center">
-    <img src="Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
+    <img src="images/Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
     <h2 class="title">Your Account<span style="color:#fd7e14;">.</span></h2>
     <div id="userInfo" class="mt-4">
       <p><strong>First Name:</strong> <span id="firstName">Loading...</span></p>
