--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kaya | Home</title>
-  <link rel="icon" href="Kaya.jpg" type="image">
+  <link rel="icon" href="images/Kaya.jpg" type="image">
   
   <!-- Bootstrap & Font Awesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="font.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/font.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="Kaya.png" alt="Kaya" width="50" height="50">
+        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
     <div class="row align-items-center">
       <!-- Logo on the left -->
       <div class="col-md-4 text-center mb-4 mb-md-0">
-        <img src="Kaya.png" alt="Kaya Logo" id="KayaIN" style="max-height: 190px;">
+        <img src="images/Kaya.png" alt="Kaya Logo" id="KayaIN" style="max-height: 190px;">
       </div>
 
       <!-- Paragraph & Newsletter on the right -->
@@ -88,9 +88,6 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Removed duplicate newsletter form script to fix redeclaration error -->
-
 
 </body>
 </html>
