--- a/login.html
+++ b/login.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Login | Kaya </title>
-  <link rel="icon" href="Kaya.jpg" type="image">
+  <link rel="icon" href="images/Kaya.jpg" type="image">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="font.css">
+  <link rel="stylesheet" href="css/font.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="signup.css"> <!-- Reuse same layout -->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/signup.css">
   <style>
   body {
-    background-image: url('bg-2.jpg');
+    background-image: url('images/bg-2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="Kaya.png" alt="Kaya" width="50" height="50">
+        <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
 <!-- Login Form -->
 <div class="form-wrapper">
   <div class="form-container text-center">
-    <img src="Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
+    <img src="images/Kaya.png" alt="Logo" class="img-fluid mb-3" style="max-height: 80px;">
     <h2 class="title">Welcome back<span style="color:#fd7e14;">.</span></h2>
     <p class="mt-2">Don't have an account? <a href="signup.html">Sign up</a></p>
 
