--- a/pricing.html
+++ b/pricing.html
@@ -11,75 +11,14 @@
 <!-- BootStrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<style> 
-  footer { background-color: #101C2C;
-          color: #fff;
-          text-align: Center;
-          max-width: 100%;
-          overflow-x: hidden;
-          }
-  main {
-    color:#fff;
-    text-align: center;
-    max-width: 100%;
-    overflow-x: hidden;
-  }
-  #button2 { background-color: #101C2C;
-            color: #fff;
-            }
-  #button2:hover { background-color: #B58E5A;
-                  color: #fff;
-                  }
-  #price { color: #B58E5A;
-            }
-  body {
-    background-image: url('bg-2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-  #price {
-    font-size: larger;
-    color: #B58E5A;
-    font-weight: bold;
-  }
-</style>
-
-<style>
-.package-card {
-  border: 2px solid #B58E5A;
-  border-radius: 16px;
-  background: rgba(16, 28, 44, 0.85);
-  padding: 32px 16px;
-  margin-bottom: 32px;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.08);
-}
-.package-card h2 {
-  font-family: 'Raleway', Arial, sans-serif;
-  font-weight: 700;
-  color: #fff;
-}
-.package-card p , #inquire{
-  font-family: 'Cormorant Garamond', serif;
-  color: #fff;
-}
-.package-card #price {
-  color: #B58E5A;
-  font-size: 1.3rem;
-  font-weight: bold;
-}
-@keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
-}
-</style>
+<link rel="stylesheet" href="css/pricing.css">  
 
     <!-- Add inside <head> before your styles -->
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;900&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="font.css">
+<link rel="stylesheet" href="css/font.css">
 
 <title>Kaya | Pricing </title>
-<link rel="icon" href="Kaya.jpg" type="image">
+<link rel="icon" href="images/Kaya.jpg" type="image">
 </head>
 
 <header> 
@@ -87,7 +26,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">  <div class="container">
     <a class="navbar-brand" href="index.html">
-      <img src="Kaya.png" alt="Kaya" width="50" height="50">
+      <img src="images/Kaya.png" alt="Kaya" width="50" height="50">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -153,7 +92,7 @@
 </div>
       </div>
       <div class="col-md-5 col-12 text-center">
-        <img src="launch.png" alt="Launch Pad" class="img-fluid" style="max-width: 80%; height: auto;">
+        <img src="images/launch.png" alt="Launch Pad" class="img-fluid" style="max-width: 80%; height: auto;">
       </div>
     </div>
 
@@ -169,7 +108,7 @@
 </div>
       </div>
       <div class="col-md-5 col-12 text-center">
-        <img src="growth.png" alt="Growth Engine" class="img-fluid" style="max-width: 80%; height: auto;">
+        <img src="images/growth.png" alt="Growth Engine" class="img-fluid" style="max-width: 80%; height: auto;">
       </div>
     </div>
 
@@ -185,7 +124,7 @@
 </div>
       </div>
       <div class="col-md-5 col-12 text-center">
-        <img src="authority.jpg" alt="Authority Suite" class="img-fluid" style="max-width: 80%; height: auto;">
+        <img src="images/authority.jpg" alt="Authority Suite" class="img-fluid" style="max-width: 80%; height: auto;">
       </div>
     </div>
   </div>
@@ -195,7 +134,7 @@
 <!-- Card -->
 
 <div id="popup-card" class="card" style="width: 14rem; display: none; position: fixed; bottom: 24px; right: 24px; z-index: 1050;">
-  <img src="assistant.jpg" class="card-img-top" alt="Kaya Assistant" style="max-height: 90px; object-fit: cover;">
+  <img src="images/assistant.jpg" class="card-img-top" alt="Kaya Assistant" style="max-height: 90px; object-fit: cover;">
   <div class="card-body" style="padding: 0.75rem;">
     <button type="button" class="btn-close" aria-label="Close" onclick="dismissCard(this)" style="float: right;"></button>
     <h6 class="card-title" style="font-size: 1rem;">Feedback?</h6>
